# Mindroid.idl

./: .gitignore  .travis.yml  Cargo.toml  README.md  rustfmt.toml
ci/: before_deploy.sh  install.sh  script.sh
examples/: compact_disc_player.midl
examples/location/: Criteria.midl  IGpsStatusListener.midl  ILocationListener.midl  ILocationManager.midl  Location.midl
midl/: Cargo.toml
midl-common/: Cargo.toml
midl-common/src/: lib.rs  model.rs
midl-common/src/generator/: json.rs  midl.rs  mod.rs  uml.rs
midl-common/src/generator/mindroid/: cpp.rs  java.rs  mod.rs
midl-common/src/parser/: midl.pest  midl.rs  mod.rs
midl-common/src/tests/: CMakeLists.txt  build.gradle  mod.rs  test.midl
midl-common/src/utils/: java.rs  mod.rs
midl/src/: main.rs
